z-index fix?

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -24,7 +24,7 @@ html, body {
     margin: 0;
     padding: 0;
     overflow-x: hidden;
-    background: linear-gradient(180deg, #3A0CA3, #8c0d71);
+    background-color: #280972;
 }
 
 .container {
@@ -35,6 +35,7 @@ html, body {
     perspective: 10px;
     color: white;
     overflow-x: hidden;
+    
 }
 
 /* Starfields */
@@ -69,14 +70,14 @@ html, body {
 }
 
 main {
-    
+    background: linear-gradient(180deg, #3A0CA3, #8c0d71);
+    z-index: -10;
 }
 
-.content {
+#contentField {
     margin: auto;
     display: flex;
     z-index: 10;
-    /* background: linear-gradient(180deg, #3A0CA3, #8c0d71); */
 }
 
 h1 {
